--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,3 +39,11 @@ Style/WordArray:
 
 Style/SymbolArray:
   Enabled: false
+
+Rails/FilePath:
+  Exclude:
+    - 'config/environments/development.rb'
+
+Rails/Output:
+  Exclude:
+    - 'db/seeds.rb'
